fixtures/autofix-namespace-missing-default-deny-netpol-fixed.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: default
spec: {}
---
# https://github.com/ahmetb/kubernetes-network-policy-recipes/blob/master/07-allow-traffic-from-some-pods-in-another-namespace.md
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-all-ns-monitoring
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
  - from:
    - namespaceSelector: # chooses all pods in namespaces labelled with team=operations
        matchLabels:
          team: operations
      podSelector: # chooses pods with type=monitoring
        matchLabels:
          type: monitoring
  - ports: # This is comment 1
    - port: 3452 #This is comment 2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
